--- a/app/views/tests/list.html.erb
+++ b/app/views/tests/list.html.erb
@@ -8,5 +8,8 @@
     <h1>Simpler framework at work!</h1>
 
     <p><%= @time %></p>
+    <p>params: <%= @params %></p>
+    <p>response.status: <%= @status %></p>
+    <p>response.headers: <%= @headers %></p>
   </body>
 </html>
