--- a/app/views/tests/show.html.erb
+++ b/app/views/tests/show.html.erb
@@ -7,7 +7,7 @@
   <body>
     <h1>Simpler framework at work!</h1>
 
-    <p><%= @time %></p>
+    <p>time: <%= @time %></p>
     <p>params: <%= @params %></p>
     <p>response.status: <%= @status %></p>
     <p>response.headers: <%= @headers %></p>
