--- a/app/views/tests/list.html.erb
+++ b/app/views/tests/list.html.erb
@@ -1,15 +1,3 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>List | Simpler application</title>
-  </head>
-  <body>
-    <h1>Simpler framework at work!</h1>
+List | Simpler application
 
-    <p><%= @time %></p>
-    <p>params: <%= @params %></p>
-    <p>response.status: <%= @status %></p>
-    <p>response.headers: <%= @headers %></p>
-  </body>
-</html>
+Simpler framework at work!
