--- a/app/views/tests/show.html.erb
+++ b/app/views/tests/show.html.erb
@@ -7,9 +7,11 @@
   <body>
     <h1>Simpler framework at work!</h1>
 
-    <p>time: <%= @time %></p>
-    <p>params: <%= @params %></p>
-    <p>response.status: <%= @status %></p>
-    <p>response.headers: <%= @headers %></p>
+    <form action="/tests/3/question/3/author/5?var_get=1" method=post>
+      <input name="var_post" value="2">
+      <button type=submit>OK</button>
+    </form>
+
+
   </body>
 </html>
