--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -6,10 +6,6 @@
   </head>
   <body>
     <h1>Simpler framework at work!</h1>
-
-    <p><%= @time %></p>
-    <p>params: <%= @params %></p>
-    <p>response.status: <%= @status %></p>
-    <p>response.headers: <%= @headers %></p>
+    controller.params = <%= @params %>
   </body>
 </html>
